# v4l2.homework

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: Camera.hpp  CameraScanner.hpp  ControlWindow.hpp  FormatConversion.hpp  ImageWindow.hpp
src/: CMakeLists.txt  Camera.cpp  CameraScanner.cpp  ControlWindow.cpp  FormatConversion.cpp  ImageWindow.cpp  main.cpp
test/: CMakeLists.txt  test-Camera.cpp  test-scan.cpp  test-v4l2.cpp
test/gtkmm/: CMakeLists.txt  ComboBox.cpp  HelloWorld.cpp  base.cpp  imageShow.cpp
